--- a/styles.css
+++ b/styles.css
@@ -134,9 +134,13 @@ h4
 #footer h4
 {
     text-align: center;
-    margin: 10px;
+    margin: 10px 0px 5px 0px;
 }
 
+#footer p
+{
+    text-align: center;
+}
 p
 {
     font-size: 18px;
